# ai-teaching-assistant

./: README.md  content_validation_report.md  learning_path_report.md  pyproject.toml  report.md
knowledge/: user_preference.txt
src/course_plan/: content_validation_report.md  course_suggestion.py  crew.py  feedback_analysis_report.md  main.py  route.py  tech_stack_report.md
src/course_plan/config/: agents.yaml  tasks.yaml
src/course_plan/db/: CalendarStudyPlanner.py  connection.py  courseimporter.py  util.py
src/course_plan/model/: user.py
src/course_plan/static/: style.css
src/course_plan/templates/: index.html  profile.html
src/course_plan/tools/: generate_ics.py
src/notebook/: courseparser.py  db_design.txt
